fix the size of the top fold when viewing on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -246,6 +246,11 @@ h4
 
 @media(max-width: 850px)
 {
+    .top-fold
+    {
+        height: 800px;
+    }
+
     .top-fold__center
     {
         flex-direction: column;
